--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,7 +3,7 @@
 <nav>
   <ul>
     <li><a routerLink="/first-component" routerLinkActive="active">First Component</a></li>
-    <li><a routerLink="/second-component" routerLinkActive="active">Second Component</a></li>
+    <li><a routerLink="/second-component" routerLinkActive="active">Damagenya gak ngotak</a></li>
   </ul>
 </nav>
 <!-- The routed views render in the <router-outlet>-->
